--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,20 +9,14 @@
 	<div class="">
 		<h1><a href="/">Django News Project</a></h1>
     </div>
+    {% for post in posts %}
     <div class="">
-    	<p>published: 23.11.2019, 17:45</p>
-    	<h2><a href="">My first blog</a></h2>
-    	<p>
-    		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam esse, quibusdam. Omnis quis dignissimos voluptas impedit! Aliquid optio maxime laudantium in nam dicta quam quos impedit, blanditiis, modi veniam adipisci, provident debitis magni est. Aut ratione tempora ex, eius atque dolore voluptatum ea qui amet delectus rem? Magnam velit ipsa reprehenderit illo vitae ipsum neque nemo, molestiae placeat tempore possimus quisquam animi, delectus fuga labore quas hic enim ullam. Nam voluptates quam quia repellendus fugit officiis cupiditate illum architecto, similique totam cum, nobis rem ratione nihil tempora assumenda velit tempore impedit? Impedit quasi neque totam deserunt dolor, voluptas ipsum delectus.		
-    	</p>
+        <h2><a href="#">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <p>published: {{ post.created_date }}</p>
+        <hr>
     </div>
-     <div class="">
-    	<p>published: 23.11.2019, 17:45</p>
-    	<h2><a href="">My second blog</a></h2>
-    	<p>
-    		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam esse, quibusdam. Omnis quis dignissimos voluptas impedit! Aliquid optio maxime laudantium in nam dicta quam quos impedit, blanditiis, modi veniam adipisci, provident debitis magni est. Aut ratione tempora ex, eius atque dolore voluptatum ea qui amet delectus rem? Magnam velit ipsa reprehenderit illo vitae ipsum neque nemo, molestiae placeat tempore possimus quisquam animi, delectus fuga labore quas hic enim ullam. Nam voluptates quam quia repellendus fugit officiis cupiditate illum architecto, similique totam cum, nobis rem ratione nihil tempora assumenda velit tempore impedit? Impedit quasi neque totam deserunt dolor, voluptas ipsum delectus.		
-    	</p>
-    </div>
+    {% endfor %}
 </body>
 </html>
 
