--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Django News Project</title>
-</head>
-<body>
-	<div class="">
-		<h1><a href="/">Django News Project</a></h1>
-    </div>
-    {% for post in posts %}
-    <div class="">
-        <h2><a href="#">{{ post.title }}</a></h2>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <h2 class="hover-title"><a href="#">{{ post.title }}</a></h2>
+        <img src="{{ post.image_urls }}" alt="">
         <p>{{ post.text|linebreaksbr }}</p>
         <p>published: {{ post.created_date }}</p>
         <hr>
     </div>
-    {% endfor %}
-</body>
-</html>
-
-
+{% endfor %}
+{% endblock %}
 
 
 
